Force break long file paths to make sure the don't overlap with the central editor column

--- a/pootle/static/css/editor.css
+++ b/pootle/static/css/editor.css
@@ -457,6 +457,7 @@ table td.translate-translation
     display: inline;
     font-size: 85%;
     line-height: 120%;
+    word-break: break-word;
 }
 
 .sidetitle,
